--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="utf-8">
 <title>Interactive Floor Plan</title>
-<link rel="stylesheet" type="text/css" href="../ADVFinal/css/reset.css">
-<link rel="stylesheet" type="text/css" href="../ADVFinal/css/styles.css">
+<link rel="stylesheet" type="text/css" href="css/reset.css">
+<link rel="stylesheet" type="text/css" href="css/styles.css">
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 </head>
 
 <body>
 
 	<header>
-    <img id="banner" alt="an animated GIF informing users that this is an interatice map" src="../ADVFinal/img/Open_Banner.gif">
+    <img id="banner" alt="an animated GIF informing users that this is an interatice map" src="img/Open_Banner.gif">
     </header>
     <div id="key">
     	<h4>Classroom Key</h4>	
@@ -234,7 +234,7 @@
                         <div class="roomNamePop">Instruction Lab</div>
                     </div>
                     <div class="roomImage">
-                        	<img src="../ADVFinal/img/PHOTO_515.JPG" alt="image of room 515, an instruction lab" />	
+                        	<img src="img/PHOTO_515.JPG" alt="image of room 515, an instruction lab" />	
                     </div>
                		<div class="roomDetails">                		
                         <div class="roomSchedule">
@@ -316,7 +316,7 @@
            				<div class="roomNamePop">Graphic Design Studio</div>
                     </div>
                     <div class="roomImage">
-                        	<img src="../ADVFinal/img/PHOTO_514.JPG" alt="image of room 514, an instruction lab" />  
+                        	<img src="img/PHOTO_514.JPG" alt="image of room 514, an instruction lab" />  
                     </div>
                		<div class="roomDetails">                		
                        <div class="roomSchedule">
@@ -397,7 +397,7 @@
            				<div class="roomNamePop">Hospitality Lab</div>
                     </div>
                     <div class="roomImage">
-                        	<img src="../ADVFinal/img/PHOTO_513.JPG" alt="image of room 513, an instruction lab" />
+                        	<img src="img/PHOTO_513.JPG" alt="image of room 513, an instruction lab" />
                     </div>
                		<div class="roomDetails">                		
                         <div class="roomSchedule">
@@ -477,7 +477,7 @@
            				<div class="roomNamePop">Graphic Design Studio</div>
                     </div>
                     <div class="roomImage">
-                        	<img src="../ADVFinal/img/PHOTO_511.JPG" alt="image of room 511, an instruction lab" />
+                        	<img src="img/PHOTO_511.JPG" alt="image of room 511, an instruction lab" />
                     </div>
                		<div class="roomDetails">                		
                         <div class="roomSchedule">
@@ -557,7 +557,7 @@
            				<div class="roomNamePop">Graphic Design Studio</div>
                     </div>
                     <div class="roomImage">
-                        	<img src="../ADVFinal/img/PHOTO_509.JPG" alt="image of room 509, an instruction lab" />
+                        	<img src="img/PHOTO_509.JPG" alt="image of room 509, an instruction lab" />
                     </div>
                		<div class="roomDetails">                		
                         <div class="roomSchedule">
@@ -637,7 +637,7 @@
            				<div class="roomNamePop">Graphic Design Studio</div>
                     </div>
                     <div class="roomImage">
-                        	<img src="../ADVFinal/img/PHOTO_507.JPG" alt="image of room 507, an instruction lab" />
+                        	<img src="img/PHOTO_507.JPG" alt="image of room 507, an instruction lab" />
                     </div>
                		<div class="roomDetails">                		
                         <div class="roomSchedule">
@@ -716,7 +716,7 @@
            				<div class="roomNamePop">Graphic Design Studio</div>
                     </div>
                     <div class="roomImage">
-                        	<img src="../ADVFinal/img/PHOTO_506.JPG" alt="image of room 506, an instruction lab" />
+                        	<img src="img/PHOTO_506.JPG" alt="image of room 506, an instruction lab" />
                     </div>
                		<div class="roomDetails">                		
                         <div class="roomSchedule">
@@ -796,7 +796,7 @@
            				<div class="roomNamePop">Graphic Design Studio</div>
                     </div>
                     <div class="roomImage">
-                        	<img src="../ADVFinal/img/PHOTO_505.JPG" alt="image of room 505, an instruction lab" />
+                        	<img src="img/PHOTO_505.JPG" alt="image of room 505, an instruction lab" />
                     </div>
                		<div class="roomDetails">                		
                         <div class="roomSchedule">
@@ -883,7 +883,7 @@
            				<div class="roomNamePop">Graphic Design Studio</div>
                     </div>
                     <div class="roomImage">
-                        	<img src="../ADVFinal/img/PHOTO_516.JPG" alt="image of room 516, an instruction lab" /> 
+                        	<img src="img/PHOTO_516.JPG" alt="image of room 516, an instruction lab" /> 
                     </div>
                		<div class="roomDetails">                		
                         <div class="roomSchedule">
@@ -962,7 +962,7 @@
                         <div class="roomNamePop">Graphic Design Lab</div>
                     </div>
                     <div class="roomImage">
-                        	<img src="../ADVFinal/img/PHOTO_508.JPG" alt="image of room 508, a graphic design lab" />	
+                        	<img src="img/PHOTO_508.JPG" alt="image of room 508, a graphic design lab" />	
                     </div>
                		<div class="roomDetails"> 
                 		<div class="roomSchedule">
@@ -1043,7 +1043,7 @@
                         <div class="roomNamePop">Safety and Security</div>
                     </div>
                     <div class="roomImage">
-                        	<img src="../ADVFinal/img/PHOTO_510.JPG" alt="image of room 510, an instruction lab" />	
+                        	<img src="img/PHOTO_510.JPG" alt="image of room 510, an instruction lab" />	
                     </div>
                		<div class="roomDetails">                		
                         <div class="roomSchedule">
@@ -1126,7 +1126,7 @@
                         <div class="roomNamePop">Graphic Design</div>
                     </div>
                     <div class="roomImage">
-                        	<img src="../ADVFinal/img/PHOTO_512.JPG" alt="image of room 512, an instruction lab" />	
+                        	<img src="img/PHOTO_512.JPG" alt="image of room 512, an instruction lab" />	
                     </div>
                		<div class="roomDetails">                		
                         <div class="roomSchedule">
@@ -1209,7 +1209,7 @@
                         <div class="roomNamePop">Graphic Design Lab</div>
                     </div>
                     <div class="roomImage">
-                        	<img src="../ADVFinal/img/PHOTO_504.JPG" alt="image of room 504, an instruction lab" />	
+                        	<img src="img/PHOTO_504.JPG" alt="image of room 504, an instruction lab" />	
                     </div>
                		<div class="roomDetails">                		
                         <div class="roomSchedule">
@@ -1291,7 +1291,7 @@
                         <div class="roomNamePop">Safety and Security</div>
                     </div>
                     <div class="roomImage">
-                        	<img src="../ADVFinal/img/PHOTO_508.JPG" alt="image of room 502, an instruction lab" />	
+                        	<img src="img/PHOTO_508.JPG" alt="image of room 502, an instruction lab" />	
                     </div>
                		<div class="roomDetails">                		
                         <div class="roomSchedule">
@@ -1374,7 +1374,7 @@
                         <div class="roomNamePop">Safety and Security</div>
                     </div>
                     <div class="roomImage">
-                        	<img src="../ADVFinal/img/PHOTO_508.JPG" alt="image of room 501, an instruction lab" />	
+                        	<img src="img/PHOTO_508.JPG" alt="image of room 501, an instruction lab" />	
                     </div>
                		<div class="roomDetails">                		
                         <div class="roomSchedule">
@@ -1452,7 +1452,7 @@
                         <div class="roomNamePop"></div>
                     </div>
                     <div class="roomImage">
-                        	<img src="../ADVFinal/img/PHOTO_MilitaryL.JPG" alt="image of the gallery." />	
+                        	<img src="img/PHOTO_MilitaryL.JPG" alt="image of the gallery." />	
                     </div>
                		<div class="roomDetails"> 
                 		<div class="roomSchedule">
@@ -1508,7 +1508,7 @@
                         <div class="roomNamePop"></div>
                     </div>
                     <div class="roomImage">
-                        	<img src="../ADVFinal/img/PHOTO_wRoom.JPG" alt="image of the Women's Bathroom enterance." />	
+                        	<img src="img/PHOTO_wRoom.JPG" alt="image of the Women's Bathroom enterance." />	
                     </div>
                		<div class="roomDetails"> 
                 		<div class="roomSchedule">
@@ -1529,7 +1529,7 @@
                         <div class="roomNamePop"></div>
                     </div>
                     <div class="roomImage">
-                        	<img src="../ADVFinal/img/PHOTO_mRoom.JPG" alt="image of the Men's Bathroom enterance." />	
+                        	<img src="img/PHOTO_mRoom.JPG" alt="image of the Men's Bathroom enterance." />	
                     </div>
                		<div class="roomDetails"> 
                 		<div class="roomSchedule">
@@ -1550,7 +1550,7 @@
                         <div class="roomNamePop"></div>
                     </div>
                     <div class="roomImage">
-                        	<img src="../ADVFinal/img/PHOTO_gallery.JPG" alt="image of the gallery." />	
+                        	<img src="img/PHOTO_gallery.JPG" alt="image of the gallery." />	
                     </div>
                		<div class="roomDetails"> 
                 		<div class="roomSchedule">
@@ -1613,7 +1613,7 @@
                         <div class="roomNamePop"></div>
                     </div>
                     <div class="roomImage">
-                        	<img src="../ADVFinal/img/PHOTO_Library.jpg" alt="image of the library." />	
+                        	<img src="img/PHOTO_Library.jpg" alt="image of the library." />	
                     </div>
                 	<div class="roomDetails"> 
                 		<div class="roomSchedule">
@@ -1678,8 +1678,8 @@ $('.targetDiv').hide();
 	</script>
     
 	<footer>
-    <img id="credits" alt="an animated GIF informing users who created this awesome interatice map" src="../ADVFinal/img/credits.gif">
+    <img id="credits" alt="an animated GIF informing users who created this awesome interatice map" src="img/credits.gif">
     </footer>   
- <script src="../ADVFinal/js/script.js"></script>  
+ <script src="js/script.js"></script>  
 </body>
 </html>
